[gd_scene load_steps=9 format=3 uid="uid://c4y3h41ow1o55"]

[ext_resource type="Script" path="res://scripts/crate_debris.gd" id="1_e77ec"]
[ext_resource type="Texture2D" uid="uid://mkmjflocyl7e" path="res://Tiles/custom_tiles.png" id="1_q18gu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ygs"]
atlas = ExtResource("1_q18gu")
region = Rect2(160, 80, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_4484n"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_q0t0q"]
atlas = ExtResource("1_q18gu")
region = Rect2(176, 80, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbegy"]
size = Vector2(4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjvul"]
atlas = ExtResource("1_q18gu")
region = Rect2(192, 80, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efj65"]
size = Vector2(3, 3)

[node name="CrateDebris" type="Node2D"]
script = ExtResource("1_e77ec")

[node name="Chunk1" type="RigidBody2D" parent="."]
position = Vector2(-4, -4)
collision_layer = 8
collision_mask = 8
mass = 4.0
gravity_scale = 0.8

[node name="Sprite2D" type="Sprite2D" parent="Chunk1"]
texture = SubResource("AtlasTexture_o7ygs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chunk1"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_4484n")

[node name="Chunk2" type="RigidBody2D" parent="."]
position = Vector2(3, -1)
collision_layer = 8
collision_mask = 8
mass = 4.0
gravity_scale = 0.8

[node name="Sprite2D" type="Sprite2D" parent="Chunk2"]
texture = SubResource("AtlasTexture_q0t0q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chunk2"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_jbegy")

[node name="Chunk3" type="RigidBody2D" parent="."]
position = Vector2(-5, 0)
collision_layer = 8
collision_mask = 8
mass = 4.0
gravity_scale = 0.8

[node name="Sprite2D" type="Sprite2D" parent="Chunk3"]
texture = SubResource("AtlasTexture_fjvul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chunk3"]
position = Vector2(-1.5, 0.5)
shape = SubResource("RectangleShape2D_efj65")
